css header and body overflow issues addressed. added buttons for fullscreen but need to activate

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
   min-height: 100vh;
   min-width: 100%;
   background-size: cover;
+  overflow-x: hidden;
 }
 
 .header {
@@ -29,6 +30,7 @@ body {
   padding-right: 50px;
   padding-bottom: 10px;
   padding-top: 10px;
+  position: absolute;
 }
 
 .logo {
@@ -39,38 +41,47 @@ body {
   font-size: 25px;
   font-weight: bold;
   color: red;
+  position: relative;
 }
 
 .logo a {
   color: red;
   text-decoration: none;
+  position: relative;
 }
 
 .leftMenu {
   float: left;
   display: inline-block;
   line-height: 2em;
+  position: relative;
 }
 
 .leftMenu ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  position: relative;
 }
 
 .leftMenu ul li {
   display: inline-block;
   padding-right: 10px;
+  position: relative;
 }
 
 .leftMenu ul li a {
   color: white;
   font-size: 14px;
   text-decoration: none;
+  position: relative;
+  z-index: 1;
 }
 
 .leftMenu ul li a:hover {
   color: red;
+  position: relative;
+  z-index: 1;
 }
 
 
@@ -125,7 +136,6 @@ body {
   font-size: 0;
   overflow: hidden;
   margin-bottom: 1em;
-  margin-top: 15px;
 }
 
 .player:fullscreen {
@@ -145,6 +155,8 @@ body {
 video {
   width: 100%;
   height: 95%;
+  position: absolute;
+  margin-top: 10%;
 }
 
 .playerButton {
@@ -167,6 +179,35 @@ video {
   width: 10px;
   height: 30px;
 }
+
+.fullScreen {
+  width: 180px;
+  text-align: center;
+  width: 180px;
+  margin: 10px 5px;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+}
+
+.viewFullScreenButton {
+  background-color: red;
+  color: white;
+  width: 180px;
+  text-align: center;
+  width: 180px;
+  margin: 10px 5px;
+  border-radius: 5px;
+  padding: 5px;
+  position: absolute;
+  left: 45%;
+}
+
+.viewFullScreenButton:hover {
+  font-weight: bold;
+  background: rgba(0,0,0,.6)
+}
+
 
 .playerControls {
   display: flex;
